<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ach So</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="my_videos">My videos</string>
    <string name="loading">Loading</string>
    <string name="record">Record new video</string>
    <string name="read_qr_code">Search by QR code</string>
    <string name="title_activity_genre_selection">Select a type for a video</string>
    <string name="title_activity_information">Video information</string>
    <string name="action_settings">Settings</string>
    <string name="select_genre">What kind of video this was?</string>
    <string name="good_work_genre">Good work</string>
    <string name="problem_genre">Problem</string>
    <string name="site_overview_genre">Site overview</string>
    <string name="trick_of_trade_genre">Trick of trade</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="qr_to_video">Add QR code</string>
    <string name="deletion_title">Video deletion</string>
    <string name="deletion_question">Do you want to delete selected video(s) and annotation(s)?</string>
    <string name="first_page">All videos</string>
    <string name="storage_error">Media storage error</string>
    <string name="detailed_storage_error">Error accessing the video storage. Is SD card inserted into the device?</string>
    <string name="login_description">Login to server</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="autologin">Keep me logged in</string>
    <string name="login_nag_text">Invalid username or password.</string>
    <string name="title_activity_login">Login to server</string>
    <string name="not_loggedin_nag_title">Not logged in</string>
    <string name="not_loggedin_nag_text">You need to be logged in to upload videos.</string>
    <string name="location_not_enabled">Location services disabled</string>
    <string name="location_not_enabled_text">Location services aren\'t enabled. Do you want to enable them now?</string>
    <string name="url_found_label">Found link:</string>
    <string name="code_found_label">Found code:</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="keep">Keep</string>
    <string name="edit_text">Edit text</string>

    <!-- SemanticVideo data -->
    <string name="semanticvideo_title">Title</string>
    <string name="semanticvideo_creator">Creator</string>
    <string name="semanticvideo_qrcode">QR code</string>
    <string name="semanticvideo_createdat">Created at</string>
    <string name="semanticvideo_uri">File name on device</string>
    <string name="semanticvideo_genre">Genre</string>
    <string name="semanticvideo_uploaded">Uploaded</string>
    <string name="semanticvideo_latitude">Latitude</string>
    <string name="semanticvideo_longitude">Longitude</string>
    <string name="semanticvideo_accuracy">Location accuracy</string>
    <string name="semanticvideo_unknown_creator">Unknown creator</string>
    <string name="semanticvideo_unknown_location">Unknown location</string>
    <string name="semanticvideo_no_qr">No QR code read</string>
    <!-- /SemanticVideo data -->

    <string name="search_hint">Search for videos</string>
    <string name="title_activity_search">Search</string>
    <string name="remote_video_separator">Remote videos</string>

    <!-- ENGLISH GENRES BEGIN -->
    <string name="good_work_genre_english">Good work</string> <!-- DO NOT TRANSLATE THIS. THESE NEED TO BE IN ENGLISH IN EVERY FILE! -->
    <string name="problem_genre_english">Problem</string> <!-- DO NOT TRANSLATE THIS. THESE NEED TO BE IN ENGLISH IN EVERY FILE! -->
    <string name="site_overview_genre_english">Site overview</string> <!-- DO NOT TRANSLATE THIS. THESE NEED TO BE IN ENGLISH IN EVERY FILE! -->
    <string name="trick_of_trade_genre_english">Trick of trade</string>
    <string name="latest_videos">Latest</string>
    <string name="recommended_videos">Recommended</string>
    <string name="no_connection">No connection to cloud</string>
    <string name="nearby_videos">Nearby</string>
    <string name="search_results">Search results</string>
    <string name="add_video">Add video</string>
    <string name="author_is_me">Me</string>
    <string name="author_is_unknown">Unknown</string>
    <string name="unknown_format">Unknown format, or file is not a video</string>
    <string name="video_already_exists">This video is already in Ach so!</string>
    <string name="login_successful">Login successful</string>
    <string name="created_new_video">Created new video.</string>
    <string name="code_added_to_videos">Code added to selected video(s).</string>
    <string name="upload_successful">Upload successful.</string>
    <string name="buffering">Buffering...</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="connection_problem">Connection problem</string>
    <string name="authentication_problem">Authentication problem</string>
    <string name="i5cloud_prefs">i5Cloud account</string>
    <string name="action_register">Create account</string>
    <string name="prompt_fullname">Full name</string>
    <string name="confirm_pass">Repeat password</string>
    <string name="error_passwords_dont_match">Password doesn\'t match with verification</string>
    <!-- DO NOT TRANSLATE THIS. THESE NEED TO BE IN ENGLISH IN EVERY FILE! -->
    <!-- ENGLISH GENRES END -->

    <string name="title_activity_approval">ApprovalActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome">Welcome</string>

</resources>